--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>"ArthurHD"🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Learning to Maintain Your Center</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Japanese Bakery with 80-Year-Old Grandmas</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>You Laugh you Lose: Horse Girls</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN CATEGORIES: TRICKSHOT EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Why Life Feels So Hard (and How to Live Better) | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -497,7 +497,7 @@
                     <div class="video-info">
                         <h3>Creativity Comes From Presence, Not Thinking | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>Stop Waiting for Life to Begin | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Learning to Maintain Your Center</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7953,7 +7953,7 @@
                         <div class="video-info">
                             <h3>Why Life Feels So Hard (and How to Live Better) | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8041,7 +8041,7 @@
                         <div class="video-info">
                             <h3>Creativity Comes From Presence, Not Thinking | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8129,7 +8129,7 @@
                         <div class="video-info">
                             <h3>Stop Waiting for Life to Begin | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>"ArthurHD"🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Japanese Bakery with 80-Year-Old Grandmas</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>You Laugh you Lose: Horse Girls</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN CATEGORIES: TRICKSHOT EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
