--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Is Prop Trading in a bubble?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -607,7 +607,7 @@
                     <div class="video-info">
                         <h3>Can you just flip a coin and make money trading?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2261,7 +2261,7 @@
                     <div class="video-info">
                         <h3>My Multi seeds Panini with   Sourdough Pizza Dough</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2624,7 +2624,7 @@
                     <div class="video-info">
                         <h3>POV: A Chef’s Night at the Pass 🍽️ #cooking #shorts #pov #chef</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 30, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Is Prop Trading in a bubble?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5842,7 +5842,7 @@
                         <div class="video-info">
                             <h3>Can you just flip a coin and make money trading?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9538,7 +9538,7 @@
                         <div class="video-info">
                             <h3>My Multi seeds Panini with   Sourdough Pizza Dough</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9637,7 +9637,7 @@
                         <div class="video-info">
                             <h3>POV: A Chef’s Night at the Pass 🍽️ #cooking #shorts #pov #chef</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 30, 2025</div>
                         </div>
                     </a>
                 </div>
