--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">39 minutes ago</div>
+                        <div class="date">57 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Is Prop Trading in a bubble?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -229,9 +229,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Horse Girls">
+                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Girls Who Make Horses Their Entire Personality">
                     <div class="video-info">
-                        <h3>You Laugh you Lose: Horse Girls</h3>
+                        <h3>You Laugh you Lose: Girls Who Make Horses Their Entire Personality</h3>
                         <div class="channel">ItalianBach</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -596,7 +596,7 @@
                     <div class="video-info">
                         <h3>Try not to Cringe: TikToks</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1124,7 +1124,7 @@
                     <div class="video-info">
                         <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Is Prop Trading in a bubble?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">39 minutes ago</div>
+                            <div class="date">57 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,9 +10261,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Horse Girls">
+                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Girls Who Make Horses Their Entire Personality">
                         <div class="video-info">
-                            <h3>You Laugh you Lose: Horse Girls</h3>
+                            <h3>You Laugh you Lose: Girls Who Make Horses Their Entire Personality</h3>
                             <div class="channel">ItalianBach</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -10397,7 +10397,7 @@
                         <div class="video-info">
                             <h3>Try not to Cringe: TikToks</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10617,7 +10617,7 @@
                         <div class="video-info">
                             <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
