--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>High-Energy Leaves | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Is Prop Trading in a bubble?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -240,9 +240,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Girls Who Make Horses Their Entire Personality">
+                    <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="HORSE GIRLS CRINGE">
                     <div class="video-info">
-                        <h3>You Laugh you Lose: Girls Who Make Horses Their Entire Personality</h3>
+                        <h3>HORSE GIRLS CRINGE</h3>
                         <div class="channel">ItalianBach</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>I went Christmas Shopping...</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Is Prop Trading in a bubble?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>High-Energy Leaves | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Don't Let Your Life Be Poisoned | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10272,9 +10272,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=t5OVzkzZeGw" target="_blank">
-                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="You Laugh you Lose: Girls Who Make Horses Their Entire Personality">
+                        <img src="https://i.ytimg.com/vi/t5OVzkzZeGw/mqdefault.jpg" alt="HORSE GIRLS CRINGE">
                         <div class="video-info">
-                            <h3>You Laugh you Lose: Girls Who Make Horses Their Entire Personality</h3>
+                            <h3>HORSE GIRLS CRINGE</h3>
                             <div class="channel">ItalianBach</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>I went Christmas Shopping...</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
