--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Understanding Levels of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>The Real Varanasi Is Not On The Ground | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>"AI" is Taking Over With New Pizza Delivery System</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>"ArthurHD"🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>Foreseeing Death in 84 Days | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -717,7 +717,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Covered this small indie band and everybody knew the words? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -728,7 +728,7 @@
                     <div class="video-info">
                         <h3>Diversify Your Portfolio: Strategies for Market Volatility #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>10 TradeStation Algo Entries: Code & Backtest Results #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -981,7 +981,7 @@
                     <div class="video-info">
                         <h3>Arthur Does His Best Calfreezy Impression..💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5864,7 +5864,7 @@
                         <div class="video-info">
                             <h3>Diversify Your Portfolio: Strategies for Market Volatility #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5908,7 +5908,7 @@
                         <div class="video-info">
                             <h3>10 TradeStation Algo Entries: Code & Backtest Results #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Understanding Levels of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>The Real Varanasi Is Not On The Ground | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>Why Vilva & Neem Are Dearest to Shiva | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8019,7 +8019,7 @@
                         <div class="video-info">
                             <h3>Foreseeing Death in 84 Days | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>"AI" is Taking Over With New Pizza Delivery System</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>"ArthurHD"🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10441,7 +10441,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Covered this small indie band and everybody knew the words? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10507,7 +10507,7 @@
                         <div class="video-info">
                             <h3>Arthur Does His Best Calfreezy Impression..💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
